fixed view for psCandidate and fix Z-index on pstrend

--- a/rheticus-gui/app/styles/main.scss
+++ b/rheticus-gui/app/styles/main.scss
@@ -603,7 +603,7 @@ table.gridtable td {
 	padding: 2px;
 	right: 40px;
 	width: 50%;
-	z-index: 1060;
+	z-index: 1;
 	bottom: 65px;
 	/*min-width: 700px;
 	min-height: 430px;*/
